--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.36.1",
+    "@vercel/analytics": "^1.6.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
