--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/node": "^5.5.28",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
